Fixing data overflow issues on Firefox (and maybe iOS)

--- a/sass/data.scss
+++ b/sass/data.scss
@@ -1,19 +1,17 @@
 
 
 datum.narrow {
-    margin-right: 17px;
+    padding-right: 17px;
 }
 
 datum.extrabottom {
-    margin-right: 17px;
-    margin-bottom: 40px;
+    padding-right: 17px;
 }
 
 
 datum.quad {
-    margin-left:90px;
-    margin-right: 130px;
-    margin-bottom: 40px;
+    padding-left:90px;
+    padding-right: 130px;
 }
 
 datum {
@@ -21,7 +19,7 @@ datum {
     margin-right: 30px;
     border-collapse: collapse;
     vertical-align: top;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-size: 14px;
 
 
